src/test/deca/syntax/invalid/minus_int_minus_void.deca
// Description :
// 
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      droite de l'opérateur avec un int à gauche).
// 
// Résultats : 
// 
//       N/A
// 
// Historique : 
// 
//      Créé le 06/06/2023 par gl03

{
    int y=3-;
    print(y);
}